<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>

    <name>T-and-P application aggregator</name>
    <description>
        This pom is a maven aggregator for all application modules
    </description>

    <groupId>by.epam.brest</groupId>
    <artifactId>t-and-p</artifactId>
    <version>1.0-SNAPSHOT</version>

    <modules>
        <module>t-and-p-model</module>
        <module>t-and-p-test-db</module>
        <module>t-and-p-dao-api</module>
        <module>t-and-p-dao</module>
        <module>t-and-p-service-api</module>
        <module>t-and-p-service</module>
        <module>t-and-p-service-rest</module>
        <module>t-and-p-web-app</module>
        <module>t-and-p-rest-app</module>
    </modules>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
        <maven-failsafe-plugin.version>3.0.0-M4</maven-failsafe-plugin.version>
        <project.testResult.directory>${project.build.directory}/test-results</project.testResult.directory>
        <junit.utReportFolder>${project.testResult.directory}/test</junit.utReportFolder>
        <junit.itReportFolder>${project.testResult.directory}/integrationTest</junit.itReportFolder>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <spring-boot>2.4.4</spring-boot>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>by.epam.brest</groupId>
                <artifactId>t-and-p-model</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>by.epam.brest</groupId>
                <artifactId>t-and-p-dao-api</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>by.epam.brest</groupId>
                <artifactId>t-and-p-dao</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>by.epam.brest</groupId>
                <artifactId>t-and-p-service-api</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>by.epam.brest</groupId>
                <artifactId>t-and-p-service</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>by.epam.brest</groupId>
                <artifactId>t-and-p-service-rest</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>by.epam.brest</groupId>
                <artifactId>t-and-p-test-db</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <!-- JaCoCo -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.6</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <runOrder>alphabetical</runOrder>
                    <reportsDirectory>${junit.utReportFolder}</reportsDirectory>
                    <excludes>
                        <exclude>**/*IntegrationTest*</exclude>
                    </excludes>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven-failsafe-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <!-- Due to spring-boot repackage, without adding this property test classes are not found
                             See https://github.com/spring-projects/spring-boot/issues/6254 -->
                    <classesDirectory>${project.build.outputDirectory}</classesDirectory>
                    <!-- Force alphabetical order to have a reproducible build -->
                    <runOrder>alphabetical</runOrder>
                    <reportsDirectory>${junit.itReportFolder}</reportsDirectory>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                    <includes>
                        <include>**/*IntegrationTest*</include>
                    </includes>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>